<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/details"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1"
    android:paddingTop="4dip" >
    <TableRow android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/name" />
        <EditText android:id="@+id/name"
            android:inputType="text"/>
    </TableRow>
    <TableRow android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/address" />
        <EditText android:id="@+id/address"
            android:inputType="text"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/type" />
        <RadioGroup android:id="@+id/radioGroup">
            <RadioButton android:id="@+id/type_sit_down"
                android:text="@string/option1"
                android:checked="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioButton android:id="@+id/type_take_out"
                android:text="@string/option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioButton android:id="@+id/type_delivery"
                android:text="@string/option3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RadioGroup>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/notes"/>
        <EditText android:id="@+id/notes"
            android:maxLines="2"
            android:inputType="textMultiLine"
            android:lines="2"
            android:gravity="top"/>
    </TableRow>
    <Button android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_btn"/>
</TableLayout>
